correction du background des items card

--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ body {
 }
 .background-item {
     padding: 15px 15px 15px 15px;
-    background-color: var(--md-sys-color-surface-container);
+    background-color: var(--md-sys-color-surface-bright);
     color: var(--md-sys-color-on-surface-container);
     display: flex;
     flex-flow: column;
@@ -234,6 +234,8 @@ body {
     padding: 15px 15px 15px 15px;
     border-radius: 15px;
     max-width: 40%;
+    background-color: var(--md-sys-color-surface-bright);
+    color: var(--md-sys-color-on-surface-container);
 }
 
 /* multi-classes selectors */
