animation nav-bar; déplacement icone mode compact

--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ body {
     align-items: center;
     background: var(--md-sys-color-primary);
     height: 5vh;
+    transition: 100ms ease-in;
 }
 
 .nav-container {
@@ -131,21 +132,32 @@ body {
     background-color: var(--md-sys-color-primary-container);
 }
 
-.nav-bar .nav-button:last-child {display: none;}
+.nav-left .nav-button {display: none;}
 
-@media screen and (max-width: 800px){
-    .nav-bar .nav-link { display: none; }
-    .nav-bar .nav-button:not(:last-child) { display: none; }
-    .nav-bar .nav-button:last-child { display: block; }
+@media screen and (max-width: 600px){
+    .nav-main, .nav-right { display: none; font-size: 1.5rem;}
+    .nav-left .nav-button { display: block; }
 
-    .nav-bar.nav-bar.compact {
+    .nav-bar.compact {
         display: flex;
         flex-flow: column;
+        height: 60vh;
+    }
+
+    .nav-left {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%; 
     }
 
     .nav-bar.compact .nav-main{
         display: flex;
         flex-flow: column;
+    }
+
+    .nav-bar.compact .nav-right{
+        display: flex;
     }
 
     .nav-bar.compact .nav-link{
